--- a/packages/kotti-style/src/_workspace.scss
+++ b/packages/kotti-style/src/_workspace.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	flex-direction: column;
 	box-shadow: 1px 0 2px #ddd;
+	overflow-x: auto;
 
 	h3:not(:first-of-type) {
 		margin-top: $unit-8;
